# gnome-nautilus

./: .gitignore  README.md
_build_deps/: gnome-desktop.tar.xz  libportal.tar.xz
_build_deps/glycin-2.0.8/: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  NEWS  (+2 more)
_build_deps/glycin-2.0.8/libglycin/: Cargo.toml  meson.build
_build_deps/glycin-2.0.8/libglycin/doc/: libglycin-gtk4.toml  libglycin.toml
_build_deps/glycin-2.0.8/libglycin/include/: glycin.h
_build_deps/glycin-2.0.8/libglycin/libglycin-gtk4/: Cargo.toml
_build_deps/glycin-2.0.8/libglycin/src/: image.rs
snap-backup-20260313-032747/: snap-actions.h  snap-branch-dialog.c  snap-config.c  snap-gc-dialog.c  snap-hash.h  snap-history-dialog.c  snap-hooks.h  snap-manager.h  snap-shortcuts-dialog.h  snap-status-indicator.c  snap-store.c  snap-watcher.h
snap-backup-features-20260313-033756/: meson.build  snap-actions.c  snap-audit-dialog.h  snap-batch-rename-dialog.c  snap-batch-rename-dialog.h  snap-branch-dialog.h  snap-browse-dialog.h  snap-checksum-dialog.h  snap-config.h  snap-diff-dialog.c  snap-disk-usage.c  snap-encryption.c  snap-filter-bar.c  snap-group-dialog.c  snap-history-dialog.h  snap-inspector-panel.c  snap-log-dialog.c  snap-places-toolbar.c  snap-places-toolbar.h  snap-restore-dialog.h  snap-search-engine-snap.c  snap-server.h  snap-split-view.c  snap-watcher.c
snap-backup-final-20260313-034244/: meson.build  snap-actions.c  snap-checksum-dialog.c  snap-compare-dialog.h  snap-custom-actions.c  snap-custom-actions.h  snap-diff.c  snap-diff.h  snap-disk-usage.h  snap-encrypt-dialog.h  snap-encryption.h  snap-file-notes.h  snap-folder-color.c  snap-folder-color.h  snap-gc-dialog.h  snap-hooks.c  snap-stash-dialog.c  snap-stats-dialog.c  snap-stats-dialog.h  snap-store.h  snap-sync-dialog.h  snap-undo-history.c  snap-undo-history.h
snap-backup-notes-compare-20260313-034103/: meson.build  snap-backup-dialog.c  snap-backup-dialog.h  snap-blame-dialog.h  snap-compare-dialog.c  snap-file-notes.c  snap-hook-dialog.c  snap-hook-dialog.h  snap-notes-dialog.c  snap-notes-dialog.h  snap-notify.h  snap-preview-panel.c  snap-preview-panel.h  snap-shortcuts-dialog.c  snap-statusbar.c  snap-statusbar.h  snap-template.h
snap-backup-splitview-preview-20260313-033334/: meson.build  snap-actions.c  snap-audit-dialog.c  snap-browse-dialog.c  snap-filter-bar.h  snap-hash.c  snap-import-git-dialog.c  snap-import-git-dialog.h  snap-inspector-panel.h  snap-manager.c  snap-recent-locations.c  snap-restore-dialog.c  snap-save-dialog.h  snap-search-engine-snap.h  snap-server.c  snap-split-view.h  snap-sync.c  snap-template.c  snap-terminal-panel.c
snap-backup-statusbar-filter-20260313-032928/: meson.build  snap-blame-dialog.c  snap-config-dialog.c  snap-config-dialog.h  snap-diff-dialog.h  snap-encrypt-dialog.c  snap-group-dialog.h  snap-log-dialog.h  snap-notify.c  snap-recent-locations.h  snap-save-dialog.c  snap-shortcuts-dialog.c  snap-stash-dialog.h  snap-status-indicator.h  snap-sync-dialog.c  snap-sync.h  snap-terminal-panel.h
(+348 files in other folders)
